// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getButtonAttributes() should return correct css for isSelected: false and isDisabled: false 1`] = `
{
  "aria-busy": null,
  "aria-disabled": null,
  "aria-pressed": "false",
}
`;

exports[`getButtonAttributes() should return correct css for isSelected: false and isDisabled: true 1`] = `
{
  "aria-busy": null,
  "aria-disabled": "true",
  "aria-pressed": "false",
}
`;

exports[`getButtonAttributes() should return correct css for isSelected: true and isDisabled: false 1`] = `
{
  "aria-busy": null,
  "aria-disabled": null,
  "aria-pressed": "true",
}
`;

exports[`getButtonAttributes() should return correct css for isSelected: true and isDisabled: true 1`] = `
{
  "aria-busy": null,
  "aria-disabled": "true",
  "aria-pressed": "true",
}
`;

exports[`getIconColor() should return correct icon color for isDisabled: false 1`] = `"primary"`;

exports[`getIconColor() should return correct icon color for isDisabled: true 1`] = `"contrast-medium"`;
